[package]
name = "sentry-tracing-breadcrumb"
description = "A tracing layer that adds all tracing events to sentry breadcrumb with all fields and spans"
version = "0.1.0"
edition = "2018"

[dependencies]
sentry-core = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-core = "0.1"
tracing-subscriber = { version = "0.2.19", default-features = false, features = ["json", "chrono", "fmt"] }
